--- a/deel-1-flexbox-positioneren/index.html
+++ b/deel-1-flexbox-positioneren/index.html
@@ -38,8 +38,8 @@
 <section class="opdracht-3">
     <ul>
         <li>Top left</li>
-        <li>Centered</li>
-        <li>Bottom right</li>
+        <li class="li2">Centered</li>
+        <li class="li3">Bottom right</li>
     </ul>
 </section>
 <!-- E I N D E  O P D R A C H T  3 -->
@@ -48,7 +48,7 @@
 <h3>Opdracht 4</h3>
 <img src="assets/images/opdracht-4-eindresultaat.jpg" alt="opdracht-4 voorbeeld">
 <section class="opdracht-4">
-    <ul>
+    <ul class="row1">
         <li>Zorg</li>
         <li>er</li>
         <li>voor</li>
@@ -77,15 +77,15 @@
 <img src="assets/images/opdracht-5-eindresultaat.jpg" alt="opdracht-5 voorbeeld">
 <section class="opdracht-5">
     <div>
-        <ul>
+        <ul class="col1">
             <li>Column 1 top</li>
             <li>Column 1 bottom</li>
         </ul>
-        <ul>
+        <ul class="col2">
             <li>Column 2 top</li>
             <li>Column 2 bottom</li>
         </ul>
-        <ul>
+        <ul class="col3">
             <li>Column 3 top</li>
             <li>Column 3 bottom</li>
         </ul>
