--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,25 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
-    </div>
+<nav>
+    <ul>
+        <li class="li-1"> Analytica</></li>
+        <div class="div-1">    <li> About us</li>
+            <li> Strategy</li>
+            <li> Prices</li>
+            <li> Contact</li>
+        </div>
+    </ul>
+</nav>
+<header>
+    <h2>All Your Business Data in One Place</h2>
+    <h4>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h4>
+</header>
 </body>
+<main class="main-6">
+    <p class="art-1">Lorem ipsum dolor sit amet, consecteur adispiscing elit. Ad aut consequatur deleniti ea excepturi fugit labore libero maxime, minima, minus molestiae obaecati placeat quidem quisquam reprehenderit rerum, suscipit tempora tempore.</p>
+    <p class="art-2">Lorem ipsum dolor sit amet, consecteur adispiscing elit. Ad aut consequatur deleniti ea excepturi fugit labore libero maxime, minima, minus molestiae obaecati placeat quidem quisquam reprehenderit rerum, suscipit tempora tempore.</p>
+    <p class="art-3">Lorem ipsum dolor sit amet, consecteur adispiscing elit. Ad aut consequatur deleniti ea excepturi fugit labore libero maxime, minima, minus molestiae obaecati placeat quidem quisquam reprehenderit rerum, suscipit tempora tempore.</p>
+</main>
 </html>
