--- a/deel-2-flexbox-layout/opdracht-1/index.html
+++ b/deel-2-flexbox-layout/opdracht-1/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox-opdracht: layouts maken (1)</title>
 </head>
-<body>
-<header>Header</header>
-<main>
-    <article>
+<body class="body">
+<header class="header">Header</header>
+<main class="main">
+    <article class="article">
         Article
         <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea
             earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor
@@ -44,9 +44,10 @@
             expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis
             vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
     </article>
-    <nav>Nav</nav>
-    <aside>Aside</aside>
+    <aside class="aside">Aside</aside>
+    <nav class="nav">Nav</nav>
+
 </main>
-<footer>Footer</footer>
+<footer class="footer">Footer</footer>
 </body>
 </html>
