--- a/deel-2-flexbox-layout/opdracht-2/index.html
+++ b/deel-2-flexbox-layout/opdracht-2/index.html
@@ -6,22 +6,21 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox-opdracht: layouts maken (2)</title>
 </head>
-<body>
+<body class="body2">
 <nav class="col-1">Nav</nav>
 <div class="col-2">
-    <header>Header</header>
-    <main>
-        <article>
-            Article
-            <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
-        </article>
-    </main>
-    <footer>Footer</footer>
+    <header class="header2">Header</header>
+
+    <article class="article-2">
+        Article
+        <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
+    </article>
+    <footer class="footer2">Footer</footer>
 </div>
 </body>
 </html>
