--- a/deel-2-flexbox-layout/opdracht-3/index.html
+++ b/deel-2-flexbox-layout/opdracht-3/index.html
@@ -6,23 +6,23 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox-opdracht: layouts maken (3)</title>
 </head>
-<body>
+<body class="body3">
 <nav class="col-1">Nav</nav>
 <div class="col-2">
-    <header>Header</header>
-    <main>
-        <article>
+    <header class="header-3">Header</header>
+    <main class="main3">
+        <article class="article-3">
             Article
-            <!--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
+            !--<p>ZET DEZE TEKST AAN EN UIT! consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid at blanditiis culpa dolor ea earum esse et excepturi ipsa nam qui, rem repellendus totam. A, aspernatur atque consequuntur cumque dolor expedita fugiat minima, necessitatibus nemo quaerat quas quia quis repellat sapiente sequi vel veritatis vitae! Hic illo ipsum iure repellendus sed voluptate?</p>-->
         </article>
-        <aside>Aside</aside>
+        <aside class="aside-3">Aside</aside>
     </main>
-    <footer>Footer</footer>
+    <footer class="footer-3">Footer</footer>
 </div>
 </body>
 </html>
